@@ -11,10 +11,12 @@ Version CVS HEAD (?)
       doing "make dist"
     - removed empty directories left from the cvs to svn migration
     - fixed compilation with gcc 4.6.1
-    - another "make dist" fix, for LV2 plugin
+    - another "make dist" fix, for the LV2 plugin
     - made --enable-pthread-testcancel default on Mac OS X
     - minor Makefile fix for building lscpparser when build and source
       directories are separate
+    - Mac OS X: made it possible to specify plugin installation dir to
+      configure
 
   * general changes:
     - Refactoring: moved the independent code from
@@ -89,11 +91,13 @@ Version CVS HEAD (?)
     - added support for velocity effect on amplifier envelope time
       (ampeg_vel2attack, ampeg_vel2decay, ampeg_vel2sustain and
       ampeg_vel2release)
+    - added support for EG hold (ampeg_hold)
 
   * SoundFont format engine:
     - Initial implementation (not usable yet)
     - RT-safeness: avoid malloc in audio thread
     - fixed a bug that could cause voice stealing to fail
+    - fine-tuned amplitude EG (by switching from gig to sfz EG)
 
   * Gigasampler format engine:
     - bugfix: pitch LFO controller "internal+aftertouch" was broken
@@ -115,7 +119,7 @@ Version CVS HEAD (?)
     - VST: made it possible to build the VST plugin for Mac
     - AU: link AU plugin dynamically if --disable-shared isn't
       specified
-	
+
   * MIDI driver:
     - ALSA MIDI driver supports now "NAME" device parameter, for overriding
       the ALSA sequencer client name
